# BananaSharePoint-USI

./: FileSend_Documentation.md
FileSend/TextEditor/: CMakeLists.txt  CMakeLists.txt.user.8a6e162  CMakePresets_user-example.json  authenticator.cpp  authenticator.h  main.cpp  mainwindow.cpp  mainwindow.h  secrets.h  trial.txt
